[project]
name = "arvo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dan Greco", email = "git@dangre.co" }
]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
]

[project.scripts]
arvo = "arvo:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.ty.environment]
python = ".venv"
